apps/rayne/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rayne
  namespace: media
  labels:
    app.kubernetes.io/name: rayne
spec:
  selector:
    app.kubernetes.io/name: rayne
  ports:
    - name: http
      port: 8080
      targetPort: http
